# MLM_In_prod_group_project

./: .gitignore  README.md
bharat_farming/: main.py  pyproject.toml  requirements.txt
bharat_farming/data/: X_new.csv
bharat_farming/exploration/: baseline.py  p1.ipynb  p1_updated.ipynb  p2_baseline.ipynb
bharat_farming/models/: baseline.py  features.py  inference_pipeline.py  model.py  train_pipeline.py  utils_gcs.py
inclass_exercise_2/: Dockerfile  instructions.md  main.py
