[project]
name = "bharat-farming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "gcsfs>=2026.2.0",
    "google-cloud-storage>=3.9.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
